force-app/main/default/objects/User/fields/SingletrackCMS__My_Contacts_Downloads_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__My_Contacts_Downloads_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My Contacts Downloads Summary Report</label>
    <type>Checkbox</type>
</CustomField>