force-app/main/default/objects/User/fields/SingletrackCMS__Remove_From_Search__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Remove_From_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove From Search</label>
    <type>Checkbox</type>
</CustomField>