force-app/main/default/objects/User/fields/SingletrackCMS__Singletrack_Licence__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Singletrack_Licence__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Singletrack Licence</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>