force-app/main/default/objects/User/fields/SingletrackCMS__SMail_Tagging_Mode__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__SMail_Tagging_Mode__c</fullName>
    <description>The display mode for SMail tagging.</description>
    <inlineHelpText>The display mode for SMail tagging.</inlineHelpText>
    <label>SMail Tagging Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Omnibox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>