force-app/main/default/objects/User/fields/SingletrackCMS__SMail_Version__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__SMail_Version__c</fullName>
    <description>The version of SMail to use.</description>
    <inlineHelpText>The version of SMail to use.</inlineHelpText>
    <label>SMail Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previous</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>