force-app/main/default/objects/User/fields/SingletrackCMS__Source__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>