force-app/main/default/objects/User/fields/SingletrackCMS__Source_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Source_Id__c</fullName>
    <label>Source Id</label>
    <type>TextArea</type>
</CustomField>