force-app/main/default/objects/User/fields/SingletrackCMS__Use_CIA_For_C2D__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Use_CIA_For_C2D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use CIA For C2D</label>
    <type>Checkbox</type>
</CustomField>