force-app/main/default/objects/User/fields/SingletrackCMS__Use_Color_Blind_Options__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Use_Color_Blind_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Color Blind Options</label>
    <type>Checkbox</type>
</CustomField>