force-app/main/default/objects/User/fields/Sync_with_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SHAVEEN06DEC2010 CASE599 &gt; Create a new contact for this USER, else find the BANK CONTACT based on SAM ACCOUNT name and link its BANK CONTACT&apos;s ID to this USER.</description>
    <label>Sync with Contact</label>
    <type>Checkbox</type>
</CustomField>