force-app/main/default/objects/User/fields/Team_Value_Combination__c.field-meta.xml
<CustomField>
    <fullName>Team_Value_Combination__c</fullName>
    <formula>TEXT(User_CIB_Global_Area__c ) &amp; &quot;-&quot; &amp; TEXT(User_Division__c  )&amp; &quot;-&quot; &amp; TEXT(Business_Unit__c   )&amp; &quot;-&quot; &amp; TEXT(User_Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Value Combination</label>
    <type>Text</type>
</CustomField>