force-app/main/default/objects/User/fields/Total_External_Core_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_External_Core_Meetings__c</fullName>
    <description>EN-0777 – Number of External Core Meetings attended this year</description>
    <inlineHelpText>Number of External Core Meetings attended this year</inlineHelpText>
    <label>Total External Core Meetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>