force-app/main/default/objects/User/fields/Total_External_Day_to_Day_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_External_Day_to_Day_Meetings__c</fullName>
    <description>EN-0777 – Number of Day to Day External Meetings attended this year</description>
    <inlineHelpText>Number of Day to Day External Meetings attended this year</inlineHelpText>
    <label>Total External Day to Day Meetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>