force-app/main/default/objects/User/fields/Total_Internal_Day_to_Day_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Day_to_Day_Meetings__c</fullName>
    <description>EN-0777 – Number of Internal Day to Day Meetings attended this year</description>
    <inlineHelpText>Number of Internal Day to Day Meetings attended this year</inlineHelpText>
    <label>Total Internal Day to Day Meetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>