force-app/main/default/objects/User/fields/User_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>User_CIB_Global_Area__c</fullName>
    <label>User CIB Global Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa Regions</fullName>
            </value>
            <value>
                <fullName>CIBI</fullName>
            </value>
            <value>
                <fullName>CIBROA</fullName>
            </value>
            <value>
                <fullName>CIBSA</fullName>
            </value>
            <value>
                <fullName>CIB Global</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>PBB SA</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>