force-app/main/default/objects/User/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <formula>City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The User&apos;s City location (80 characters or less)</inlineHelpText>
    <label>User City</label>
    <type>Text</type>
</CustomField>