force-app/main/default/objects/User/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <formula>Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The User&apos;s Country location (80 characters or less)</inlineHelpText>
    <label>User Country</label>
    <type>Text</type>
</CustomField>