force-app/main/default/objects/User/fields/User_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivated_Date__c</fullName>
    <description>Date field that will store the deactivate date of the user</description>
    <inlineHelpText>Deactivated date of the user</inlineHelpText>
    <label>User Deactivated Date</label>
    <type>Date</type>
</CustomField>