force-app/main/default/objects/User/fields/User_Division__c.field-meta.xml
<CustomField>
    <fullName>User_Division__c</fullName>
    <label>User Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>User_CIB_Global_Area__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Business Enablers</fullName>
            </value>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Enterprise Banking</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
            <value>
                <fullName>General Management</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Small Enterprise</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
            <value>
                <fullName>Vehicle and Asset Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>