force-app/main/default/objects/User/fields/User_Franco__c.field-meta.xml
<CustomField>
    <fullName>User_Franco__c</fullName>
    <description>this field is to set the Franco the user belongs to</description>
    <label>User Franco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Developed Markets</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>East Africa</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>South and Central Africa</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>West Africa</fullName>
            </value>
            <value>
                <fullName>Uganda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>