force-app/main/default/objects/User/fields/User_State_Province__c.field-meta.xml
<CustomField>
    <fullName>User_State_Province__c</fullName>
    <formula>State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The User&apos;s State / Province location (80 characters or less)</inlineHelpText>
    <label>User State/Province</label>
    <type>Text</type>
</CustomField>