force-app/main/default/objects/User/fields/User_Summary_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>User_Summary_Last_Updated__c</fullName>
    <description>EN-0777 -Last Date/Time when User summary fields were updated</description>
    <inlineHelpText>The Date and Time that the Client Summary values were last updated / calculated</inlineHelpText>
    <label>User Summary Last Updated</label>
    <type>DateTime</type>
</CustomField>