force-app/main/default/objects/User/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <description>Used to load contacts manually</description>
    <externalId>true</externalId>
    <inlineHelpText>The User&apos;s Email Address (80 characters or less)</inlineHelpText>
    <label>User Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>