force-app/main/default/objects/User/validationRules/Birth_Day_And_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_Day_And_Month</fullName>
    <active>true</active>
    <description>Check that date has a valid format (DD/MM)

            (CRM Birthday Reminder Case# 207 C Reinecke 2010/09)</description>
    <errorConditionFormula>LEN(Birth_Day_Month__c) &lt;&gt; 0 &amp;&amp; (
            OR(
            LEN(Birth_Day_Month__c) &lt;&gt; 5,
            NOT(ISNUMBER(LEFT(Birth_Day_Month__c,2))),
            NOT(ISNUMBER(RIGHT(Birth_Day_Month__c,2))),
            RIGHT(LEFT(Birth_Day_Month__c,3),1) &lt;&gt; &quot;/&quot;,
            YEAR( DATE(2008,VALUE(RIGHT(Birth_Day_Month__c,2)), VALUE(LEFT(Birth_Day_Month__c,2)))) &lt;&gt; 2008))</errorConditionFormula>
    <errorDisplayField>Birth_Day_Month__c</errorDisplayField>
    <errorMessage>Enter valid Birth Day and Month in the following format: DD/MM</errorMessage>
</ValidationRule>