force-app/main/default/objects/User/validationRules/Reason_User_Is_Frozen.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_User_Is_Frozen</fullName>
    <active>true</active>
    <description>This validation will trigger if  Frozen Account is checked and if there is no reason for user being frozen</description>
    <errorConditionFormula>AND( Frozen_Account__c = True, ISPICKVAL( Reason_User_Is_Frozen__c ,&quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Reason_User_Is_Frozen__c</errorDisplayField>
    <errorMessage>Please Select Reason Why User Is Being Frozen</errorMessage>
</ValidationRule>