force-app/main/default/objects/User/validationRules/SingletrackCMS__Alias_cannot_contain_quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>SingletrackCMS__Alias_cannot_contain_quotes</fullName>
    <active>false</active>
    <description>Alias cannot contain a quote character</description>
    <errorConditionFormula>CONTAINS(Alias, &quot;&apos;&quot;)</errorConditionFormula>
    <errorMessage>Alias cannot contain a quote character</errorMessage>
</ValidationRule>