force-app/main/default/objects/User/validationRules/User_SAM_Account_User_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>User_SAM_Account_User_Name_Check</fullName>
    <active>false</active>
    <description>NiehausR-Case530-Validate the SAM Account User Name format</description>
    <errorConditionFormula>IF(OR(CONTAINS( SA_Domain_UserName__c , &quot;\\&quot;),Sync_with_Contact__c == false),false,true)</errorConditionFormula>
    <errorMessage>The SAM Account Name must be in the format &lt;Domain Name&gt;\&lt;Account Name&gt;
            e.g. SCMBNT1\NiehausR</errorMessage>
</ValidationRule>