force-app/main/default/objects/User/listViews/BCC_AR_Users_Active.listView-meta.xml
<ListView>
    <fullName>BCC_AR_Users_Active</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>AE_Number__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>DEFAULT_CURRENCY</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>BCC AR Custom Std User - Mobile</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BCC AR Users - Active</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>