force-app/main/default/objects/User/listViews/PBB_Lifestyle_Users.listView-meta.xml
<ListView>
    <fullName>PBB_Lifestyle_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Personal Business Banking Custom Std User - Mobile</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
    </filters>
    <label>PBB Lifestyle Users</label>
    <language>en_US</language>
</ListView>