force-app/main/default/objects/User/listViews/Unused_User_Records_Active.listView-meta.xml
<ListView>
    <fullName>Unused_User_Records_Active</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
    </filters>
    <label>Unused User Records - Active</label>
    <sharedTo></sharedTo>
</ListView>